welcome.lessons.welcome.array.search.IndexOfValue.scala.error
indexOfValue:1: error: not found: value tab
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {{for (i<-0 to tab.length-1) {if (nums[i]==lookingFor) return i+1}}; return -1} 
                                                                        ^indexOfValue:1: error: not found: type i
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {{for (i<-0 to tab.length-1) {if (nums[i]==lookingFor) return i+1}}; return -1} 
                                                                                                ^indexOfValue:1: error: value nums of type Array[Int] does not take type parameters.
def indexOfValue(nums:Array[Int] ,lookingFor:Int): Int = {{for (i<-0 to tab.length-1) {if (nums[i]==lookingFor) return i+1}}; return -1} 
                                                                                               ^